[project]
name = "proxy3"
version = "0.1.0"
authors = [{ name = "Yifei Kong", email = "kong@yifei.me" }]
description = "Proxy3 - Man-in-the-middle http/https proxy in a single python script"
license = { file = "LICENSE" }
dependencies = []
readme = "README.md"
requires-python = ">=3.10"
urls = { "repository" = "https://github.com/yifeikong/proxy3" }
classifiers = [
    "Development Status :: 3 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.scripts]
proxy3 = "proxy3:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
